# bert

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build-dfu-tools.yml  build-firmware.yml
docs/: firmware-release.md
scripts/: update_manifest.py  update_tools_manifest.py
src/bert/: __init__.py
src/bert/adapters/: __init__.py  bumble_host.py  dongle_registry.py  firmware_fetch.py  flasher.py  hci_transport.py  pcap.py  pcap_nordic.py  sniffer.py
src/bert/cli/: __init__.py  _helpers.py  doctor.py  dongles.py  firmware.py  ir.py  main.py  pcap.py  profiles.py  run.py  scan.py  tools.py
src/bert/firmware/: __init__.py  manifest.json
src/bert/ir/: __init__.py  loader.py  schema.py  validate.py
src/bert/parser/: __init__.py  confidence.py  fetch.py  html_parser.py  pdf_parser.py
src/bert/profiles/battery_service/: profile.yaml
src/bert/profiles/device_information/: profile.yaml
src/bert/profiles/heart_rate/: profile.yaml  tests.py
src/bert/reporter/: __init__.py  html.py  junit.py  markdown.py
src/bert/review/: __init__.py  diff.py  tui.py
src/bert/runner/: __init__.py  assertions.py  context.py  core.py  registry.py  timeline.py
src/bert/runner/procedures/: __init__.py
tests/: conftest.py
tests/hwil/: test_real_hrp.py
tests/integration/: test_runner_with_virtual_dut.py
tests/unit/: test_assertions.py  test_dongle_registry.py  test_firmware_fetch.py  test_flasher.py  test_html_parser.py  test_ir_schema.py  test_pcap_nordic.py  test_registry.py  test_reporter.py  test_review_diff.py  test_timeline.py
